# crypto-tradfi-pipeline

./: .gitignore  DEPLOY.md  Dockerfile.airflow  Makefile  README.airflow.md  README.md  docker-compose.yml  env.airflow.example  leet.py  main.py  medium_article.md  pyproject.toml  run_coingecko_pipeline.py
.dlt/: config.toml  secrets.toml
.github/workflows/: ci-lint.yml  ci-tests.yml
dags/: README.md  __init__.py  crypto_market_pipeline.py  dbt_transforms.py  defillama_pipeline.py  yahoo_finance_pipeline.py
dags/utils/: alerting.py  dbt_runner.py
data/temp/: batch_current.parquet
dbt/: .user.yml  README.md  dbt_project.yml  profiles.example.yml  schema.yml
dbt/analyses/: scratchpad.ipynb
dbt/macros/: calculate_ratio.sql  configure_s3.sql  get_external_location.sql
logs/: ingest_postgres.jsonl
logs/scheduler/: latest
scripts/: README.md  aggregate_parquet.py  export_to_s3.py  ingest_postgres.py  init_s3_structure.py  query_parquet_s3.py  read_latest_parquet.py  run_dbt_with_env.py  test_discord_alert.py  test_duckdb_glue.py
scripts/alerts/: __init__.py  discord_notifier.py
scripts/glue/: __init__.py  sync_glue_catalog.py
src/: README.md  config.py
src/blockchain/: PLAN.md  blockchain.py  dune_client.py  dune_config.py  dune_dlt_source.py  dune_queries.example.toml  run_dune_to_duckdb.py
src/monitoring/: README.md  __init__.py  context.py  logging.py
src/pipelines/: __init__.py  base.py  coingecko.py  defillama.py  dune.py  fred.py  yahoo_finance.py
src/utils/: partitioning.py
terraform/: README.md  glue-policy-for-existing-user.json  main.tf  terraform.tfvars.example  variables.tf
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: README.md  generate_mock_data.py  mock_data.py
tests/integration/: __init__.py  (+4 more)
(+13 files in other folders)
